# gis-mcp

./: 404.html  CNAME  Dockerfile  Dockerfile.local  README.md  index.html  llms-full.txt  llms.txt  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: test.yml
agents/Langchain/: README.md  my_gis_agent.py  requirements.txt
agents/OpenAI-Node/: README.md
agents/OpenAI-Nodejs/: README.md  app.js  package.json
api/geopandas/: index.html
api/geopandas/append_gpd/: index.html
api/pyproj/: index.html
api/pysal/: index.html
api/pysal/adbscan/: index.html
api/rasterio/: index.html
api/shapely/: index.html
api/visualize/: index.html
contributing/: index.html
data-gathering/: index.html
data-gathering/administrative_boundaries/: index.html
data-gathering/climate/: index.html
data-gathering/ecology/: index.html
data-gathering/land_cover/: index.html
data-gathering/movement/: index.html
data-gathering/satellite_imagery/: index.html
docs/: getting-started.md  http-transport.md  index.md  storage-configuration.md
docs/examples/: README.md
docs/gis-ai-agent/: README.md  langchain.md  openai-nodejs.md
docs/install/: README.md  docker.md  pip.md
donate/: index.html
endpoints/: index.html
examples/: index.html
examples/basic_spatial_analysis_claude/: index.html
examples/climate_data_example/: index.html
examples/crs_area_distance_analysis/: index.html
examples/movement_example/: index.html
getting-started/: index.html
gis-ai-agent/: index.html
gis-ai-agent/langchain/: index.html
gis-ai-agent/openai-nodejs/: index.html
http-transport/: index.html
install/: index.html
install/developers/: index.html
install/docker/: index.html
install/pip/: index.html
install/smithery/: index.html
related-mcp-servers/: index.html
search/: search_index.json
src/gis_mcp/: __init__.py  geopandas_functions.py  main.py  pyproj_functions.py  pysal_functions.py  rasterio_functions.py  shapely_functions.py
storage-configuration/: index.html
styles/: extra.css
tests/: README.md  TESTING_GUIDE.md  TODO_FUTURE_TESTS.md  __init__.py  compare_functions.py  conftest.py  test_geopandas_functions.py  test_helpers.py  test_pyproj_functions.py  test_pysal_functions.py  test_rasterio_functions.py  test_save_tool.py  test_shapely_functions.py
vibe-coding/: index.html
(+89 files in other folders)
