[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "gis-mcp"
version = "0.11.0"
description = "A Model Context Protocol (MCP) server implementation for GIS operations using GIS libraries"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Mahdi Nazari Ashani"},
    {name = "Saba Kazemi"},
    {name = "Shahab Esfandiar"},
    {name = "Yasin Mohammadi"},
    {name = "Homa Ganjali"},
    {name = "GIS MCP Server Contributors"},
]

keywords = ["mcp", "gis", "llm", "agentic AI", "geospatial", "ogc", "pyproj", "shapely", "geopandas", "rasterio", "pysal", "pygadm", "cdsapi", "pygbif", "fiona"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastmcp==2.13.1",
    "numpy>=1.23,<2.0",
    "shapely>=2.1.0",
    "pyproj>=3.7.1",
    "pandas>=2.0.0",
    "tabulate>=0.9.0",
    "rasterio==1.3.9",
    "fiona==1.9.6",
    "geopandas==1.1.1",
    "libpysal>=4.13.0",
    "esda>=2.7.0",
    "spreg==1.8.3",
    "pillow>=10.0.0",
    "giddy>=2.3.6",
    "pyyaml>=6.0"
]

[project.optional-dependencies]
administrative-boundaries = [
    "pygadm>=0.5.0"
]

climate = [
    "cdsapi>=0.6.1"
]

ecology = [
    "pygbif>=0.6.4"
]

movement = [
    "osmnx>=2.0.0"
]

satellite-imagery = [
    "pystac-client>=0.7.6",
    "planetary-computer>=1.0.0",
    "xarray>=2023.1.0",
    "stackstac>=0.5.0",
    "requests>=2.31",
]

land-cover = [
    "pystac-client>=0.7.6",
    "planetary-computer>=1.0.0",
    "xarray>=2023.1.0",
    "stackstac>=0.5.0",
    "requests>=2.31",
]

visualize = [
    "folium>=0.15.0",
    "pydeck>=0.9.0",
]

all = [
    "pygadm>=0.5.0",
    "cdsapi==0.7.6",
    "pygbif>=0.6.4",
    "osmnx>=2.0.0",
    "pystac-client>=0.7.6",
    "planetary-computer>=1.0.0",
    "xarray>=2023.1.0",
    "stackstac>=0.5.0",
    "requests>=2.31",
    "folium>=0.15.0",
    "pydeck>=0.9.0",
]

[project.scripts]
gis-mcp = "gis_mcp.main:main"

[tool.hatch.metadata]
allow-direct-references = true
